--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,14 @@
-# Auto detect text files and perform LF normalization
+# Normalize line endings to LF in repo, convert to native on checkout
 * text=auto
+
+# Force specific types (optional but helpful)
+*.js text eol=lf
+*.ts text eol=lf
+*.json text eol=lf
+*.css text eol=lf
+*.html text eol=lf
+*.md text eol=lf
+*.sh text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.env text eol=lf
