--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,6 @@
-﻿aniso8601==10.0.1
+﻿# backend/requirements.txt
+
+aniso8601==10.0.1
 annotated-types==0.7.0
 attrs==25.3.0
 blinker==1.9.0
@@ -38,10 +40,10 @@ pillow==11.3.0
 proto-plus==1.26.1
 protobuf==5.29.5
 pyasn1==0.6.1
-pyasn1_modules==0.4.2
+pyasn1-modules==0.4.2
 pycparser==2.23
 pydantic==2.11.9
-pydantic_core==2.33.2
+pydantic-core==2.33.2
 pyparsing==3.2.4
 pytesseract==0.3.13
 pytz==2025.2
@@ -54,7 +56,8 @@ scipy==1.16.2
 threadpoolctl==3.6.0
 tqdm==4.67.1
 typing-inspection==0.4.1
-typing_extensions==4.15.0
+typing-extensions==4.15.0
 uritemplate==4.2.0
 urllib3==2.5.0
 Werkzeug==3.1.3
+python-dotenv==1.0.0
