--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
             "@radix-ui/react-tooltip": "^1.1.8",
             "@types/react-router-dom": "^5.3.3",
             "axios": "^1.12.1",
+            "bcryptjs": "^3.0.2",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
